--- a/firebase.json
+++ b/firebase.json
@@ -6,12 +6,7 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "rewrites": []
   },
   "firestore": {
     "database": "(default)",
